# django-syauth

./: LICENSE  README.md  pyproject.toml
examples/django-app-with-sdk/: NGROK.md  README.md
examples/django-app-with-sdk/myapp/: settings.py  urls.py  views.py
examples/django-app-with-sdk/myapp/static/css/: style.css
examples/django-app-with-sdk/myapp/templates/: base.html  dashboard.html  home.html  profile.html
examples/django-app-with-sdk/scripts/: start-ngrok.sh
src/django_syauth/: apps.py  backend.py  decorators.py  middleware.py  urls.py  utils.py  views.py
